--- a/index.html
+++ b/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;0,800;1,600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assect/images/my pic.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header class="header">
+        <nav>
+            <h1 class="nav-tittle">Soh<span style="color: #FD6E0A;">e</span>l</h1>
+            <ul>
+                <li> <a href="">Portfolio</a> </li>
+                <li><a href="">Blog</a></li>
+                <li><button>Hire Me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div >
+                <h3 class="banner-gratting">Hi, I  am</h3>
+                 <h1 class="banner-name">Sohel Rana</h1>
+                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                 <button>Download CV</button>
+                 <button>Contact</button>
+            </div>
+                <img class="profile-pic" src="assect/images/my pic.jpg" alt="">
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
