--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;0,800;1,600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assect/images/my pic.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css
+    ">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -17,18 +19,18 @@
             <ul>
                 <li> <a href="">Portfolio</a> </li>
                 <li><a href="">Blog</a></li>
-                <li><button>Hire Me</button></li>
+                <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
         <div class="banner">
-            <div >
+            <div class="banner-content">
                 <h3 class="banner-gratting">Hi, I  am</h3>
                  <h1 class="banner-name">Sohel Rana</h1>
                  <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                 <button>Download CV</button>
-                 <button>Contact</button>
+                 <button class="btn-primary"> <i class="fa-solid fa-download"></i>Download CV</button>
+                 <button class="btn-primary cont"> <i class="fa-solid fa-phone"></i>Contact</button>
             </div>
-                <img class="profile-pic" src="assect/images/my pic.jpg" alt="">
+                <img class="profile-pic" src="assect/images/pic.png" alt="">
         </div>
 
     </header>
@@ -36,7 +38,28 @@
 
     </main>
     <footer>
-
+       <div class="footer">
+        <div class="left-footer">
+            <h3>Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <img class="footer-icon" src="assect/icons/facebook.png" alt="">
+            <img class="footer-icon" src="assect/icons/twitter.png" alt="">
+            <img class="footer-icon" src="assect/icons/insta.png" alt="">
+        </div>
+        <div class="right-footer">
+            <h3>Let’s Message me</h3>
+            <label for="name">
+               <input  type="text" placeholder="Your name">
+            </label><br>
+            <label for="email">
+               <input  type="email" placeholder="Your email">
+            </label><br>
+            <label for="Message">
+               <input class="input-message"  type="text" placeholder="Message">
+            </label><br>
+            <button class="btn-primary">Submit</button>
+          </div>
+        </div>
     </footer>
     
 </body>
