--- a/index.html
+++ b/index.html
@@ -38,28 +38,24 @@
 
     </main>
     <footer>
-       <div class="footer">
-        <div class="left-footer">
-            <h3>Lets Connect</h3>
-            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-            <img class="footer-icon" src="assect/icons/facebook.png" alt="">
-            <img class="footer-icon" src="assect/icons/twitter.png" alt="">
-            <img class="footer-icon" src="assect/icons/insta.png" alt="">
+        <div class="footer-column">
+            <h3 class="section-tittle">Let's Connect</h3>
+            <p class="section-des">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-link">
+              <a href="https://www.facebook.com/sohel98r" target="_blank"><img class="footer-icon" src="assect/icons/facebook.png" alt=""></a>
+              <img class="footer-icon" src="assect/icons/twitter.png" alt="">
+              <img class="footer-icon" src="assect/icons/insta.png" alt="">
+            </div>
         </div>
-        <div class="right-footer">
-            <h3>Let’s Message me</h3>
-            <label for="name">
-               <input  type="text" placeholder="Your name">
-            </label><br>
-            <label for="email">
-               <input  type="email" placeholder="Your email">
-            </label><br>
-            <label for="Message">
-               <input class="input-message"  type="text" placeholder="Message">
-            </label><br>
-            <button class="btn-primary">Submit</button>
+        <div class="footer-column">
+            <h3 class="section-tittle" >Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your name">
+                <input type="email" placeholder="Your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" >
+            </form>
           </div>
-        </div>
     </footer>
     
 </body>
